compiler/valhalla/inlinetypes/TestBasicFunctionality.java ran with following stress flags "-XX:-TieredCompilation -XX:-ReduceInitialCardMarks -XX:-ReduceBulkZeroing -XX:-ReduceFieldZeroing -DVerifyIR=false" crashes with
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/katya/work/JavaSE/Hotspot/ws/git/valhalla/open/src/hotspot/share/gc/g1/c2/g1BarrierSetC2.cpp:764), pid=4869, tid=4884
# assert(call->in(0) == __null || call->in(0)->in(0) == __null || call->in(0)->in(0)->in(0) == __null || call->in(0)->in(0)->in(0)->in(0) == __null || call->in(0)->in(0)->in(0)->in(0)->in(0) == __null || c == call->in(0)->in(0)->in(0)->in(0)->in(0)) failed: bad barrier shape
#
# JRE version: Java(TM) SE Runtime Environment (18.0) (fastdebug build 18-lworld3ea+0-2021-07-19-2212264.katya...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-lworld3ea+0-2021-07-19-2212264.katya..., mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xc6a71c] G1BarrierSetC2::step_over_gc_barrier(Node*) const+0x77c
I am able to reproduce this on my Linux without problems.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/katya/work/JavaSE/Hotspot/ws/git/valhalla/open/src/hotspot/share/gc/g1/c2/g1BarrierSetC2.cpp:764), pid=4869, tid=4884
# assert(call->in(0) == __null || call->in(0)->in(0) == __null || call->in(0)->in(0)->in(0) == __null || call->in(0)->in(0)->in(0)->in(0) == __null || call->in(0)->in(0)->in(0)->in(0)->in(0) == __null || c == call->in(0)->in(0)->in(0)->in(0)->in(0)) failed: bad barrier shape
#
# JRE version: Java(TM) SE Runtime Environment (18.0) (fastdebug build 18-lworld3ea+0-2021-07-19-2212264.katya...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-lworld3ea+0-2021-07-19-2212264.katya..., mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xc6a71c] G1BarrierSetC2::step_over_gc_barrier(Node*) const+0x77c
I am able to reproduce this on my Linux without problems.
- relates to
-
JDK-8271280 [lworld] Revisit memory barrier requirements around inline type allocations
-
- Closed
-