8270995: [lworld] G1BarrierSetC2::step_over_gc_barrier asserts with "bad barrier shape"